--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
             id: 8,
             name: "Milky Coffe",
             price: { Small: 6000, Medium: 9000, Large: 12000 },
-            img: "../img/coffe milk.png",
+            img: "img/coffe milk.png",
           },
           {
             id: 9,
