--- a/index.html
+++ b/index.html
@@ -429,13 +429,13 @@
             id: 9,
             name: "Black Coffe",
             price: { Small: 5000, Medium: 7000, Large: 10000 },
-            img: "img/americano.png",
+            img: "img/black-coffe.png",
           },
           {
             id: 10,
             name: "Coffe Gula Aren",
             price: { Small: 6000, Medium: 9000, Large: 12000 },
-            img: "img/Kopi-suren.png",
+            img: "img/Coffe-gula-aren.png",
           },
           {
             id: 11,
@@ -453,7 +453,7 @@
             id: 13,
             name: "Milo Ice",
             price: { Small: 6000, Medium: 9000, Large: 12000 },
-            img: "img/milo.png",
+            img: "img/milo-ice.png",
           },
           {
             id: 14,
@@ -465,13 +465,13 @@
             id: 15,
             name: "Milky Taro",
             price: { Small: 6000, Medium: 9000, Large: 12000 },
-            img: "img/taro.png",
+            img: "img/milky-taro.png",
           },
           {
             id: 16,
             name: "Milky Buble Gum",
             price: { Small: 6000, Medium: 9000, Large: 12000 },
-            img: "img/buble-gum.png",
+            img: "img/milky-buble-gum.png",
           },
           {
             id: 17,
