--- a/index.html
+++ b/index.html
@@ -435,13 +435,13 @@
             id: 10,
             name: "Coffe Gula Aren",
             price: { Small: 6000, Medium: 9000, Large: 12000 },
-            img: "img/Coffe-gula-aren.png",
+            img: "img/coffe-gula-aren.png",
           },
           {
             id: 11,
             name: "Matcha Tjih",
             price: { Small: 7000, Medium: 10000, Large: 13000 },
-            img: "img/matcha.png",
+            img: "img/matcha-tjih.png",
           },
           {
             id: 12,
