--- a/index.html
+++ b/index.html
@@ -803,7 +803,7 @@
       // Logo kiri atas (gunakan crossOrigin agar bisa tampil jika file logo support CORS)
       const logo = new window.Image();
       logo.crossOrigin = "anonymous";
-      logo.src = "img/Pattern-black.png";
+      logo.src = "img/logo.png";
       logo.onload = function () {
         ctx.drawImage(logo, 30, 30, 70, 70);
         // Setelah logo, load QRIS
