--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
     />
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
-    <link rel="icon" type="image/png" href="img/pattern-white.png" />
+    <link rel="icon" type="image/png" href="img/icon.png" />
     <style>
       :root {
         --primary: #23251a;
