--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
     />
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
-    <link rel="icon" type="image/png" href="img/pattern-white.png" />
+    <link rel="icon" type="image/png" href="img/icon.png" />
     <style>
       :root {
         --primary: #23251a;
@@ -309,7 +309,7 @@
   </head>
   <body>
     <header>
-      <img src="img/Pattern-White.png" width="50px" height="auto" alt="" />
+      <img src="img/icon.png" width="50px" height="auto" alt="" />
       <h1>Ngaleueut</h1>
       <nav>
         <ul>
