--- a/index.html
+++ b/index.html
@@ -542,7 +542,7 @@
       function applyPromo() {
         const code = document.getElementById("promo-code").value.trim().toUpperCase();
         const info = document.getElementById("promo-info");
-        if (code === "NGOPINYALSE") {
+        if (code === "WKWKWK") {
           if (promoUsed) {
         info.innerHTML = `<span style="color:#e53935;">Mohon maaf, kode promo tersebut sudah dipakai.</span>`;
         promoApplied = false;
