--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
           {
             id: 2,
             name: "Pangsit Ayam",
-            price: { Small: 5000, Large: 8000 },
+            price: { Small: 5000, Large: 10000 },
             isSpicy: true,
             img: "img/pangyam.png",
           },
@@ -156,8 +156,8 @@
           },
           {
             id: 11,
-            name: "Black Coffe",
-            price: { Small: 5000, Medium: 7000, Large: 10000 },
+            name: "Americano",
+            price: { Small: 6000, Medium: 7000, Large: 10000 },
             img: "img/black-coffe.png",
             toppings: [ { name: "Boba", price: 1000 }, { name: "Jelly", price: 1000 }, ],
           },
@@ -177,41 +177,48 @@
           },
           {
             id: 14,
+            name: "Thai Tea",
+            price: { Small: 7000, Medium: 10000, Large: 13000 },
+            img: "img/Thai-tea.png",
+            toppings: [ { name: "Boba", price: 1000 }, { name: "Jelly", price: 1000 }, ],
+          },
+          {
+            id: 15,
             name: "Choco BengBeng",
             price: { Small: 8000, Medium: 11000, Large: 14000 },
             img: "img/benbeng.png",
             toppings: [ { name: "Boba", price: 1000 }, { name: "Jelly", price: 1000 }, ],
           },
           {
-            id: 15,
+            id: 16,
             name: "Milo Ice",
             price: { Small: 6000, Medium: 9000, Large: 12000 },
             img: "img/milo-ice.png",
             toppings: [ { name: "Boba", price: 1000 }, { name: "Jelly", price: 1000 }, ],
           },
           {
-            id: 16,
+            id: 17,
             name: "Milky Strawberry",
             price: { Small: 6000, Medium: 9000, Large: 12000 },
             img: "img/strawberry.png",
             toppings: [ { name: "Boba", price: 1000 }, { name: "Jelly", price: 1000 }, ],
           },
           {
-            id: 17,
+            id: 18,
             name: "Milky Taro",
             price: { Small: 6000, Medium: 9000, Large: 12000 },
             img: "img/milky-taro.png",
             toppings: [ { name: "Boba", price: 1000 }, { name: "Jelly", price: 1000 }, ],
           },
           {
-            id: 18,
+            id: 19,
             name: "Milky Buble Gum",
             price: { Small: 6000, Medium: 9000, Large: 12000 },
             img: "img/milky-buble-gum.png",
             toppings: [ { name: "Boba", price: 1000 }, { name: "Jelly", price: 1000 }, ],
           },
           {
-            id: 19,
+            id: 20,
             name: "Original Tea",
             price: { Small: 2000, Large: 5000 },
             img: "img/tea original.png",
